crates/oxc_react_compiler/tests/snapshots/switch-with-fallthrough.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/switch-with-fallthrough.js
---
function foo(x) {
	bb0: switch (x) {
		case 0:
		case 1:
		case 2: {
			break bb0;
		}
		case 3: {
			break bb0;
		}
		case 4:
		case 5:
		default:
	}
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
