crates/oxc_react_compiler/tests/snapshots/switch-with-only-default.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/switch-with-only-default.js
---
import { Stringify } from "shared-runtime";
function Component() {}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		kind: "foo",
		a: 1,
		b: true,
		c: "sathya"
	}]
};
