crates/oxc_react_compiler/tests/snapshots/symbol-call.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/symbol-call.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const historyKey = Symbol("history");
		t0 = <Widget historyKey={historyKey} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
