crates/oxc_react_compiler/tests/snapshots/tagged-template-escaped.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/tagged-template-escaped.js
---
function component(value) {
	return tag`line one\nline two: ${value}\t`;
}
