crates/oxc_react_compiler/tests/snapshots/tagged-template-in-hook.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/tagged-template-in-hook.js
---
import { useFragment } from "shared-runtime";
function Component(props) {
	const user = useFragment(graphql`
      fragment F on User {
        name
      }
    `, props.user);
	return user.name;
}
