crates/oxc_react_compiler/tests/snapshots/tagged-template-invalid-escape.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/tagged-template-invalid-escape.js
---
function component() {
	return tag`\unicode`;
}
