crates/oxc_react_compiler/tests/snapshots/tagged-template-literal.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/tagged-template-literal.js
---
function component() {
	const t = graphql`
    fragment F on T {
      id
    }
  `;
	return t;
}
