crates/oxc_react_compiler/tests/snapshots/tagged-template-mutable-result.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/tagged-template-mutable-result.js
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:annotation
function tag(strings, value) {
	return { value };
}
function Component(t0) {
	"use memo";
	const $ = _c(2);
	const { value } = t0;
	let result;
	if ($[0] !== value) {
		result = tag`${value}`;
		result.value = result.value + 1;
		$[0] = value;
		$[1] = result;
	} else {
		result = $[1];
	}
	return result.value;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 1 }],
	sequentialRenders: [{ value: 1 }, { value: 1 }]
};
