crates/oxc_react_compiler/tests/snapshots/tagged-template-primitive-result-mutation.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/tagged-template-primitive-result-mutation.js
---
// @compilationMode:annotation
function Component(t0) {
	"use memo";
	const { initial } = t0;
	const object = { value: initial };
	const tag = function tag() {
		object.value = object.value + 1;
		return 0;
	};
	tag`value`;
	return object.value;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ initial: 0 }],
	sequentialRenders: [{ initial: 0 }, { initial: 0 }]
};
